<resources>
    <string name="app_name">Cook smart!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation -->
    <string name="grocery_list">Grocery List</string>
    <string name="converter">Converter</string>
    <string name="recipes">Recipes</string>
    <string name="timer">Timer</string>
    <string name="tools">Tools</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>

    <!-- Starting fragment -->
    <string name="on_table_title">Welcome back</string>
    <string name="to_start_choose_from_left_side_menu">To start, choose from left side menu or icons below!</string>

    <!-- For converter -->
    <string name="table_spoon">"Table spoon"</string>
    <string name="glass">"Glass (250ml)"</string>
    <string name="tea_spoon">"Tea spoon"</string>
    <string name="grams">" grams"</string>
    <string name="grams_are">" grams are:"</string>
    <string name="enter_value">Enter the value!</string>
    <string name="default_value">Ingredient quantity:</string>
    <string name="convert">Convert!</string>
    <string name="enter_your_value_in_grams">Enter your value in grams!</string>

    <!-- Timer fragment -->
    <string name="timer_go">Go!</string>
    <string name="timer_stop">Stop</string>
    <string name="soft_boiled_egg">Soft boiled \n egg</string>
    <string name="hard_boiled_egg">Hard boiled \n egg</string>
    <string name="timer_has_finished">The timer has finished!</string>

    <!-- Groceries list -->
    <string name="enter_your_item">Enter your item!</string>
    <string name="item_already_exists">Item already exists in the list!</string>
    <string name="hold_to_delete">Preview item. Hold to delete!</string>
    <string name="enter_your_item_here">Enter your item here!</string>
    <string name="add">Add</string>

    <!-- delete -->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_delete">Do you want to delete this item from your list?</string>
    <string name="delete">Delete item</string>

    <!-- Info -->
    <string name="version">Version:</string>
    <string name="version_number">2.0</string>
    <string name="digital_team">Digital Team</string>
    <string name="home_page">http://www.digitalteam.lv/</string>
    <string name="developer_email">info@digitalteam.lv</string>
    <string name="for_suggestions_and_or_comments">For suggestions and/or comments:</string>
    <string name="gatavogudri_gmail_com">gatavogudri@gmail.com</string>

    <!-- Recipes -->
    <string name="share">Share</string>
    <string name="select_picture_from_gallery">Select picture from gallery</string>
    <string name="preparation">Preparation</string>
    <string name="ingredients">Ingredients</string>
    <string name="write_a_short_description">Write a short description!</string>
    <string name="what_s_your_recipe_called">What\'s your recipe called?</string>
    <string name="select_image">Select image from gallery</string>
    <string name="please_fill_all_fields">Please fill all fields!</string>
    <string name="saved">Saved</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="error_occured">An error occured</string>
    <string name="updated">Updated!</string>
    <string name="deleted">Deleted!</string>

</resources>

